--- a/MinistryChildrensChristmasProgram.html
+++ b/MinistryChildrensChristmasProgram.html
@@ -208,7 +208,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryChildren'sProgram2023-1.jpg"
             alt="Christmas play features children dressed as mice as well as the usual nativity scenes." />
         </div>
@@ -217,7 +217,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryChildren'sProgram2023-2.jpg"
             alt='candle-lit children singing "Silent Night"; party after the show' />
         </div>
