--- a/MinistryConfirmation.html
+++ b/MinistryConfirmation.html
@@ -211,7 +211,7 @@
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryConfirmation01.jpg"
             alt="Confirmation:  learning our history, exploring our faith, and making friends" />
         </div>
@@ -220,7 +220,7 @@
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryConfirmation02.jpg"
             alt="images of visits to:
           monastery; Temple B'nai Eshurun synagogue; Sinsinawa labyrinth, sanctuary, and nunnery; Martin Luther statue at Wartburg seminary" />
@@ -230,7 +230,7 @@
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryConfirmation03.jpg"
             alt='picture collection showing field trip to "Field of Dreams" and images of baptism and confirmation ceremony.' />
         </div>
