--- a/MinistryEasterEggHunt.html
+++ b/MinistryEasterEggHunt.html
@@ -206,7 +206,7 @@
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryEasterHunt2022.jpg"
             alt="Easter Sunday egg hunt" />
         </div>
