--- a/MinistryKidsShoppingDay.html
+++ b/MinistryKidsShoppingDay.html
@@ -218,7 +218,7 @@
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryKidsShoppingDay2.jpg"
             alt="Kids' Shopping Day.  Elves help kids shop.  Gifts are wrapped so they stay a surprise. Parents wait outside.  Van Meter Methodists and Baptists partner on this project." />
         </div>
