--- a/ciayouth.html
+++ b/ciayouth.html
@@ -202,18 +202,15 @@
       <div class="row d-flex justify-content-center pt-3 mx-auto text-center">
         <div class="col-lg-9">
           <img
-            class="w-50 rounded"
-            src="./images/youth01.jpg"
-            alt="Van Meter United Methodist youth group" />
+            class="w-50 w-lg-25 rounded"
+            src="./images/youth2024.jpg"
+            alt="neon fish and cross on a black background" />
         </div>
       </div>
       <!-- Secondary Header 1-->
       <div class="row mx-auto pt-4 text-center">
         <div class="col">
-          <h4>
-            S.W.A.G. Youth Group<br />
-            "Saved With Amazing Grace"
-          </h4>
+          <h4>Youth Group</h4>
         </div>
       </div>
       <!-- Paragraph 1 -->
@@ -233,8 +230,8 @@
         <div class="col">
           <p>
             <strong>Regular meetings</strong> are<br />
-            <strong>March 3 &amp; 17</strong> Middle School youth<br />
-            <strong>March 10 &amp; 24</strong> High School youth <br />
+            <strong>March 17</strong> Middle School youth<br />
+            <strong>March 24</strong> High School youth <br />
             We meet <strong>Sundays</strong> from <strong>6:30-7:30 PM</strong> (alternating middle-
             and high-school youth groups)<br />
             in the church sanctuary through the end of the school year.
@@ -308,7 +305,7 @@
       <div class="row mx-auto pt-3 text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/youthSWAG.jpg"
             alt="Youth Group:  Adventure, Service" />
         </div>
