--- a/services.html
+++ b/services.html
@@ -208,7 +208,9 @@
       <!-- Paragraph 2 -->
       <div class="row text-center pt-3 mx-auto">
         <div class="col">
-          <strong>Special service Ash Wednesday at 7:00 PM</strong>
+          <strong
+            >Upcoming special services: Good Friday at 7:00 PM; Easter Sunrise at 6:30 AM</strong
+          >
         </div>
       </div>
       <!-- Image 2 -->
