--- a/MinistryBread.html
+++ b/MinistryBread.html
@@ -224,10 +224,10 @@
         </div>
       </div>
       <!-- Image -->
-      <div class="row pt-3 mx-auto">
+      <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryBreadMinistry2023.jpg"
             alt="Generous donations from the Panera Bread Company are distributed to the Adel Food Pantry, Kids Care, seniors, and other individuals." />
         </div>
