--- a/MinistryChristmasCantata.html
+++ b/MinistryChristmasCantata.html
@@ -211,7 +211,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/ChristmasCantata2022-23web.jpg"
             alt="Images of choir, soloists, and readers" />
         </div>
