--- a/MinistryEasterBreakfast.html
+++ b/MinistryEasterBreakfast.html
@@ -211,7 +211,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/EasterSunriseBkft2023Web1.jpg"
             alt="Easter Sunrise service is followed by breakfast." />
         </div>
@@ -220,7 +220,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/EasterSunriseBkft2023Web2.jpg"
             alt="people gathered to eat, some wearing rabbit ears" />
         </div>
