--- a/MinistryShroveTuesday.html
+++ b/MinistryShroveTuesday.html
@@ -199,19 +199,19 @@
         </div>
       </div>
       <!-- Paragraph -->
-      <div class="row pt-3 mx-auto">
+      <div class="row pt-3 mx-auto text-center=">
         <div class="col">
-          <p>
+          <strong>
             Every year we celebrate Shrove Tuesday with a pancake supper, a pancake-flipping
             contest, and fellowship.
-          </p>
+          </strong>
         </div>
       </div>
       <!-- Image -->
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/MinistryShroveTuesday2024web.jpg"
             alt="Shrove Tuesday fun:  food, pancake-flipping, beads, and fellowship" />
         </div>
