--- a/choir.html
+++ b/choir.html
@@ -307,7 +307,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/ChancelChoirMelMike.jpg"
             alt="Choir sings at Easter" />
         </div>
