--- a/kidsCare.html
+++ b/kidsCare.html
@@ -232,7 +232,8 @@
           <div class="row">
             <div class="col">
               <p>
-                <strong>Summer 2024</strong> enrollment for our summer program is now open.
+                <strong>Summer 2024</strong> enrollment for our summer program is now open. Only
+                Monday-Wednesday-Friday slots are currently available.
                 <a href="/Publications/KidsCare2024SummerRegistration%20form.pdf">
                   Here is the registration form.</a
                 >
@@ -244,10 +245,15 @@
           <div class="row">
             <div class="col">
               <p>
-                <strong>Fall 2024</strong> enrollment for preschool-aged children is now open.
+                <strong>Fall 2024</strong> enrollment is now open.
                 <a href="/Publications/KidsCare2024Preschool(Fall)Registration.pdf">
-                  Here is the registration form.
-                </a>
+                  Here is the registration form for preschool-age children.</a
+                >
+                Places are filled on a first-come, first-served basis.
+                <a href="/Publications/KidsCare2024FallRegistrationForm.pdf"
+                  ><br />
+                  Here is the registration form for Fall 2024 before- and after-school care.</a
+                >
               </p>
             </div>
           </div>
@@ -271,16 +277,6 @@
                     Kids Care <em>Parent Handbook</em>
                   </a>
                 </strong>
-              </p>
-            </div>
-          </div>
-          <!-- Fall 2024 Info -->
-          <div class="row">
-            <div class="col">
-              <p>
-                <strong>Fall 2024</strong> registration will open to new families on
-                <strong>March 4</strong>, 2024. A registration form will be posted that day. Places
-                will be filled on a first-come, first-served basis.&nbsp;&nbsp;
               </p>
             </div>
           </div>
@@ -413,11 +409,11 @@
         </strong>
       </div>
       <!-- Kids Care Fun Image -->
-      <div class="row align-self-center mx-auto pt-3">
+      <div class="row align-self-center mx-auto pt-3 text-center">
         <div class="col">
           <img
             src="./images/KidsCareFun.jpg"
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             alt="Kids Care Fun a collage of pictures from activities and field trips" />
         </div>
       </div>
