--- a/specialservices.html
+++ b/specialservices.html
@@ -212,7 +212,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/HolyWeek2023.jpg"
             alt="Holy Week:  Palm Sunday, Good Friday, Easter Sunrise (followed by breakfast), and our traditional Easter service" />
         </div>
@@ -230,7 +230,7 @@
       <div class="row pt-3 mx-auto text-center">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/ChristmasCantata2022-23web.jpg"
             alt="Images of choir, soloists, director, and pianist at the cantata performance" />
         </div>
