--- a/worship.html
+++ b/worship.html
@@ -291,41 +291,108 @@
                 <tr>
                   <!-- Table Column -->
                   <td>
-                    January 7<br /><br />Sermon:<br />"Humans Becoming the Body of Christ"
-                    <br /><br />Scripture:<br />Mark 1:9-15; Acts 19:1-7
+                    <strong>March 3</strong>
+                    <p class="pt-1">Sermon:<br />"Jesus Wept?"</p>
+                    <p class="pt-1">
+                      Scripture:
+                      <br />
+                      John 11:71-27; 32-44
+                    </p>
                   </td>
                   <!-- Table Column -->
-                  <td>Holy Communion Epiphany Sunday</td>
-                </tr>
-                <!-- Table Row -->
-                <tr>
-                  <!-- Table Column -->
-                  <td>January 14<br /><br />CANCELLED due to cold</td>
-                  <!-- Table Column -->
-                  <td></td>
+                  <td>
+                    <p>Holy Communion</p>
+                    <p class="pt-1">3rd Sunday of Lent</p>
+                  </td>
                 </tr>
                 <!-- Table Row -->
                 <tr>
                   <!-- Table Column -->
                   <td>
-                    January 21<br /><br />Sermon:<br />"Your Servant Is Listening"
-                    <br /><br />Scripture:<br />Psalm 85:1-2, 8-13; Mark 1:1-8
+                    <strong>March 10</strong>
+                    <p class="pt-1">
+                      Sermon:<br />
+                      "Turning the Tables?"
+                    </p>
+                    <p class="pt-1">
+                      Scripture:<br />
+                      Matthew 21:12-17
+                    </p>
                   </td>
                   <!-- Table Column -->
-                  <td>Human Relations Day</td>
+                  <td><p>4th Sunday of Lent</p></td>
                 </tr>
                 <!-- Table Row -->
                 <tr>
                   <!-- Table Column -->
                   <td>
-                    January 28<br /><br />
-                    Sermon:<br />
-                    "Call and Response in a Multi-part Choir"<br /><br />
-                    Scripture:<br />
-                    Psalm 111:1; I Corinthians 8:1-13
+                    <strong>March 17</strong>
+                    <p class="pt-1">
+                      Sermon:<br />
+                      "Staying Connected?"
+                    </p>
+                    <p class="pt-1">
+                      Scripture:<br />
+                      John 15
+                    </p>
                   </td>
                   <!-- Table Column -->
-                  <td></td>
+                  <td>
+                    <p>5th Sunday of Lent</p>
+                    <p class="pt-1">Casual Sunday</p>
+                  </td>
+                </tr>
+                <!-- Table Row -->
+                <tr>
+                  <!-- Table Column -->
+                  <td>
+                    <strong>March 24</strong>
+                    <p class="pt-1">
+                      Sermon:<br />
+                      "What is Truth?"
+                    </p>
+                    <p class="pt-1">
+                      Scripture:<br />
+                      John 18:28-40
+                    </p>
+                  </td>
+                  <!-- Table Column -->
+                  <td><p>Palm Sunday</p></td>
+                </tr>
+                <!-- Table Row -->
+                <tr>
+                  <!-- Table Column -->
+                  <td>
+                    <strong>March 29</strong>
+                    <p class="pt-1">Good Friday</p>
+                  </td>
+                  <!-- Table Column -->
+                  <td>
+                    <p>
+                      Good Friday<br />
+                      Tenebrae Service<br />
+                      7:00 PM
+                    </p>
+                  </td>
+                </tr>
+                <!-- Table Row -->
+                <tr>
+                  <!-- Table Column -->
+                  <td>
+                    <strong>March 31</strong>
+                    <p class="pt-1">Easter Sunday</p>
+                  </td>
+                  <!-- Table Column -->
+                  <td>
+                    <p>
+                      Easter Sunrise Service<br />
+                      6:30 AM<br />
+                    </p>
+                    <p class="pt-1">
+                      Traditional Easter Service<br />
+                      10:45 AM<br />
+                    </p>
+                  </td>
                 </tr>
               </tbody>
             </table>
