--- a/MinistryShroveTuesday.html
+++ b/MinistryShroveTuesday.html
@@ -155,9 +155,7 @@
                   </li>
                   <!-- Dropdown item -->
                   <li>
-                    <a class="dropdown-item" href="/information-request.html">
-                      Information Request
-                    </a>
+                    <a class="dropdown" href="/information-request.html"> Information Request </a>
                   </li>
                 </ul>
               </li>
@@ -185,7 +183,7 @@
       </div>
     </div>
     <!-- Main content section -->
-    <div class="container mx-auto px-3 bg pb-5">
+    <div class="container mx-auto px-2 bg pb-5">
       <!-- Header -->
       <div class="row pt-5 mx-auto text-center">
         <div class="col">
@@ -221,7 +219,7 @@
     <footer class="mb-sm-3 container mx-auto p-0">
       <div class="row mx-auto bg-dark shadow text-white rounded-sm-bottom">
         <!-- UMC Logo -->
-        <div class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
+        <div class="cl-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center">
           <a href="#"><img height="60" width="60" src="./images/white+umc+logo.png" /></a>
         </div>
         <!-- Copyright Info -->
