--- a/photos.html
+++ b/photos.html
@@ -200,7 +200,7 @@
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images//Highlights2023-1.jpg"
             alt="photos of the church at worship, in service, and at Wednesday night's kids time" />
         </div>
@@ -209,7 +209,7 @@
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/Highlights2023-2.jpg"
             alt="photos of children having fun at Vacation Bible School and with their backpacks at a blessing" />
         </div>
@@ -218,7 +218,7 @@
       <div class="row mx-auto text-center pt-3">
         <div class="col">
           <img
-            class="w-100 rounded"
+            class="w-100 w-lg-75 rounded"
             src="./images/Highlights2023-3.jpg"
             alt="photos of the church in fellowship, serving food and eating together; photos of singing at worship and in rehearsal" />
         </div>
