Added Phone Number Validation As You Type

--- a/missing.html
+++ b/missing.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
   <link rel="stylesheet" href="./index.css" />
-
   <!-- Setting metadata -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,8 +26,7 @@
   <link rel="icon" href="./images/umc-logo.png" />
 </head>
 
-<body>
-  <!-- Navbar section -->
+<body><!-- Navbar section -->
   <div id="navbar-container" class="container mx-auto p-0 mt-sm-3">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded-sm-top" aria-label="Fifth navbar example">
       <div class="container-fluid">
@@ -38,7 +36,6 @@
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarsExample05">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!-- Navigation link -->
