--- a/MinistryConfirmation.html
+++ b/MinistryConfirmation.html
@@ -37,8 +37,7 @@
       <!-- Image tag with class for styling -->
       <img class="w-100 rounded-sm-top" alt="VMUMC Banner" />
     </picture>
-  </div>
-  <!-- Navbar section -->
+  </div><!-- Navbar section -->
   <div id="navbar-container" class="container mx-auto p-0">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
       <div class="container-fluid">
@@ -48,7 +47,6 @@
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarsExample05">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!-- Navigation link -->
