--- a/building-request.html
+++ b/building-request.html
@@ -19,6 +19,7 @@
   <script src="navbar.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/libphonenumber-js@1.10.57/bundle/libphonenumber-js.min.js"></script>
 
   <!-- Linking required CSS files -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
@@ -26,6 +27,31 @@
   <link rel="stylesheet" href="./index.css" />
 
   <script>
+
+    function handleSubmit() {
+      // Checks if at least 1 checkbox is checked and cancels submission if not
+      if (!CheckForCheckedCheckbox()) {
+        return false;
+      }
+      // Formats Date For Submission
+      formatDate();
+      // Ensure phone number is formatted correctly before submitting
+      formatPhone();
+
+      return true;
+    }
+    // Formats Phone Number
+    function formatPhone(event) {
+      if (event && (event.keyCode == 46 || event.keyCode == 8)) {
+        return;
+      }
+      const phoneInput = document.getElementById("field-792704759794cbb");
+      const phoneString = new libphonenumber.AsYouType("US").input(phoneInput.value);
+      phoneInput.value = phoneString;
+
+    }
+
+
     // Sets end date to selected start date if empty or before start date
     function checkDate() {
       var startDateInput = document.getElementById("date");
@@ -40,10 +66,6 @@
     }
 
     function formatDate() {
-      // Checks if at least 1 checkbox is checked and cancels submission if not
-      if (!CheckForCheckedCheckbox()) {
-        return false;
-      }
       // Get the date input value
       var startDate = new Date(document.getElementById("date").value);
       var endDate = new Date(document.getElementById("date2").value);
@@ -70,8 +92,6 @@
       // Disable Date Fields So Not Included In Submission
       document.getElementById("date").disabled = true;
       document.getElementById("date2").disabled = true;
-      console.log(formattedDate);
-      return true;
     }
     // Checks if at least one checkbox is checked
     function CheckForCheckedCheckbox() {
@@ -89,6 +109,15 @@
         return false;
       }
     }
+    // Checks if phone number field input is a number and rejects it if it is not
+    function isNumber(evt) {
+      evt = (evt) ? evt : window.event;
+      var charCode = (evt.which) ? evt.which : evt.keyCode;
+      if (charCode > 31 && (charCode < 48 || charCode > 57)) {
+        return false;
+      }
+      return true;
+    }
   </script>
 </head>
 
@@ -104,7 +133,6 @@
       <img class="w-100 rounded-sm-top" alt="VMUMC Banner" />
     </picture>
   </div>
-
   <!-- Navbar section -->
   <div id="navbar-container" class="container mx-auto p-0">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
@@ -115,7 +143,6 @@
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarsExample05">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!-- Navigation link -->
@@ -235,8 +262,7 @@
       </div>
     </div>
     <!-- Form -->
-    <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8"
-      onsubmit="return formatDate(event)">
+    <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8" onsubmit="return handleSubmit()">
       <!-- Hidden Inputs -->
       <div>
         <input type="hidden" name="acctid" id="acctid" value="u7p9qzi9dh3ql0yy" />
@@ -253,9 +279,8 @@
       </div>
       <!-- Phone Number Field -->
       <div class="form-floating mb-3">
-        <input type="tel" class="form-control" id="field-792704759794cbb" placeholder="Phone Number" name="field-792704759794cbb"
-          pattern="^\(\d{3}\)\d{3}-\d{4}$|^\d{3}-\d{3}-\d{4}$" oninvalid="this.setCustomValidity('Please enter phone number as (###)###-#### or ###-###-####')"
-          oninput="(function(e){e.setCustomValidity(''); return !e.validity.valid && e.setCustomValidity(' ')})(this)" required />
+        <input type="tel" class="form-control" id="field-792704759794cbb" placeholder="Phone Number" name="field-792704759794cbb" onkeyup="formatPhone(event)"
+          onkeypress=" return isNumber(event)" maxlength="14" required />
         <label for="field-792704759794cbb">Phone Number</label>
       </div>
       <!-- Email Field -->
