--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
   <link rel="stylesheet" href="./index.css" />
-
   <!-- Setting metadata -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,129 +24,129 @@
   <!-- Setting icon -->
   <link rel="icon" href="./images/umc-logo.png" />
 </head>
-<!-- Banner section -->
-<div id="banner" class="mt-sm-3 container mx-auto p-0 rounded-sm-top">
-  <picture>
-    <!-- Using WebP format for modern browsers -->
-    <source srcset="./images/websitebanner.webp" type="image/webp" />
-    <!-- Fallback to JPEG format for compatibility -->
-    <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-    <!-- Image tag with class for styling -->
-    <img class="w-100 rounded-sm-top" alt="VMUMC Banner" />
-  </picture>
-</div>
-<!-- Navbar section -->
-<div id="navbar-container" class="container mx-auto p-0">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
-    <div class="container-fluid">
-      <!-- Brand -->
-      <a class="navbar-brand" href="#"><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExample05">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <!-- Navigation link -->
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <!-- Navigation link -->
-          <li class="nav-item">
-            <a class="nav-link" href="/kidscare.html"> Kids Care </a>
-          </li>
-          <!-- Dropdown menu -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Our Church</a>
-            <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/directions.html"> Church Directions </a>
-              </li>
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/community.html"> Church Community </a>
-              </li>
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/services.html"> Church Services </a>
-              </li>
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/education.html"> Christian Education </a>
-              </li>
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/staff.html"> Church Staff </a>
-              </li>
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
-              </li>
-            </ul>
-          </li>
-          <!-- Navigation link -->
-          <li class="nav-item">
-            <a class="nav-link" href="/worship.html"> Worship </a>
-          </li>
-          <!-- Navigation link -->
-          <li class="nav-item">
-            <a class="nav-link" href="/ministries.html"> Ministries </a>
-          </li>
-          <!-- Navigation link -->
-          <li class="nav-item">
-            <a class="nav-link" href="/photos.html"> Photos </a>
-          </li>
-          <!-- Navigation link -->
-          <li class="nav-item">
-            <a class="nav-link" href="/calendar.html"> Calendar </a>
-          </li>
-          <!-- Navigation link -->
-          <li class="nav-item">
-            <a class="nav-link" href="/publications.html"> Publications </a>
-          </li>
-          <!-- Dropdown menu -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Contact Us</a>
-            <ul class="dropdown-menu dropdown-menu-dark bg-dark">
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/contact.html"> Contact Info </a>
-              </li>
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
-              </li>
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/building-request.html"> Building Use Request </a>
-              </li>
-              <!-- Dropdown item -->
-              <li>
-                <a class="dropdown-item" href="/information-request.html">
-                  Information Request
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+<body>
+  <!-- Banner section -->
+  <div id="banner" class="mt-sm-3 container mx-auto p-0 rounded-sm-top">
+    <picture>
+      <!-- Using WebP format for modern browsers -->
+      <source srcset="./images/websitebanner.webp" type="image/webp" />
+      <!-- Fallback to JPEG format for compatibility -->
+      <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
+      <!-- Image tag with class for styling -->
+      <img class="w-100 rounded-sm-top" alt="VMUMC Banner" />
+    </picture>
+  </div>
+  <!-- Navbar section -->
+  <div id="navbar-container" class="container mx-auto p-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
+      <div class="container-fluid">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#"><img height="24" width="24" src="./images/white+umc+logo.png" /> VMUMC</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarsExample05">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- Navigation link -->
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <!-- Navigation link -->
+            <li class="nav-item">
+              <a class="nav-link" href="/kidscare.html"> Kids Care </a>
+            </li>
+            <!-- Dropdown menu -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Our Church</a>
+              <ul class="dropdown-menu dropdown-menu-dark bg-dark shadow">
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/directions.html"> Church Directions </a>
+                </li>
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/community.html"> Church Community </a>
+                </li>
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/services.html"> Church Services </a>
+                </li>
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/education.html"> Christian Education </a>
+                </li>
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/staff.html"> Church Staff </a>
+                </li>
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/beliefs.html"> Church Beliefs </a>
+                </li>
+              </ul>
+            </li>
+            <!-- Navigation link -->
+            <li class="nav-item">
+              <a class="nav-link" href="/worship.html"> Worship </a>
+            </li>
+            <!-- Navigation link -->
+            <li class="nav-item">
+              <a class="nav-link" href="/ministries.html"> Ministries </a>
+            </li>
+            <!-- Navigation link -->
+            <li class="nav-item">
+              <a class="nav-link" href="/photos.html"> Photos </a>
+            </li>
+            <!-- Navigation link -->
+            <li class="nav-item">
+              <a class="nav-link" href="/calendar.html"> Calendar </a>
+            </li>
+            <!-- Navigation link -->
+            <li class="nav-item">
+              <a class="nav-link" href="/publications.html"> Publications </a>
+            </li>
+            <!-- Dropdown menu -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Contact Us</a>
+              <ul class="dropdown-menu dropdown-menu-dark bg-dark">
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/contact.html"> Contact Info </a>
+                </li>
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/prayer-request.html"> Prayer Request </a>
+                </li>
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/building-request.html"> Building Use Request </a>
+                </li>
+                <!-- Dropdown item -->
+                <li>
+                  <a class="dropdown-item" href="/information-request.html">
+                    Information Request
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!-- Search bar -->
-  <div class="container-fluid bg-dark pb-3">
-    <div class="row">
-      <div class="col">
-        <div class="autoComplete_wrapper">
-          <input id="autoComplete" type="search" dir="ltr" spellcheck="false" autocorrect="off" autocomplete="off" autocapitalize="off" placeholder="Search" />
+    </nav>
+    <!-- Search bar -->
+    <div class="container-fluid bg-dark pb-3">
+      <div class="row">
+        <div class="col">
+          <div class="autoComplete_wrapper">
+            <input id="autoComplete" type="search" dir="ltr" spellcheck="false" autocorrect="off" autocomplete="off" autocapitalize="off"
+              placeholder="Search" />
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-<body>
   <!-- Main content container -->
   <div class="px-3 container mx-auto bg pb-5">
     <!-- Info Section -->
