--- a/information-request.html
+++ b/information-request.html
@@ -19,11 +19,32 @@
   <script src="navbar.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/libphonenumber-js@1.10.57/bundle/libphonenumber-js.min.js"></script>
 
   <!-- Linking required CSS files -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
   <link rel="stylesheet" href="./index.css" />
+
+  <script>
+    function formatPhone(event) {
+      if (event && (event.keyCode == 46 || event.keyCode == 8)) {
+        return;
+      }
+      const phoneInput = document.getElementById("field-96b2c9af1499026");
+      const phoneString = new libphonenumber.AsYouType("US").input(phoneInput.value);
+      phoneInput.value = phoneString;
+
+    }
+    function isNumber(evt) {
+      evt = (evt) ? evt : window.event;
+      var charCode = (evt.which) ? evt.which : evt.keyCode;
+      if (charCode > 31 && (charCode < 48 || charCode > 57)) {
+        return false;
+      }
+      return true;
+    }
+  </script>
 </head>
 
 <body>
@@ -38,7 +59,6 @@
       <img class="w-100 rounded-sm-top" alt="VMUMC Banner" />
     </picture>
   </div>
-
   <!-- Navbar section -->
   <div id="navbar-container" class="container mx-auto p-0">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
@@ -49,7 +69,6 @@
           aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarsExample05">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!-- Navigation link -->
@@ -169,7 +188,7 @@
       </div>
     </div>
     <!-- Form -->
-    <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8">
+    <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8" onsubmit="formatPhone()">
       <!-- Hidden Inputs -->
       <div>
         <input type="hidden" name="acctid" id="acctid" value="u7p9qzi9dh3ql0yy" />
@@ -193,9 +212,8 @@
       </div>
       <!-- Phone Number Field -->
       <div class="form-floating mb-3">
-        <input type="tel" class="form-control" id="field-96b2c9af1499026" placeholder="Phone" name="field-96b2c9af1499026"
-          oninvalid="this.setCustomValidity('Please enter phone number as (###)###-#### or ###-###-####')"
-          oninput="(function(e){e.setCustomValidity(''); return !e.validity.valid && e.setCustomValidity(' ')})(this)" required />
+        <input type="tel" class="form-control" id="field-96b2c9af1499026" placeholder="Phone" name="field-96b2c9af1499026" onkeyup="formatPhone(event)"
+          onkeypress=" return isNumber(event)" maxlength="14" required />
         <label for="field-96b2c9af1499026">Phone</label>
       </div>
       <!-- Requested Info Field -->
