Fixing prayer-request field

--- a/prayer-request.html
+++ b/prayer-request.html
@@ -178,7 +178,7 @@
       </div>
       <!-- Name Field -->
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="name" placeholder="
+        <input type="text" class="form-control" id="name" name="name" placeholder="
           Requestor's Name" required />
         <label for="name"> Requestor's Name</label>
       </div>
